



syntax = "proto3";

package protoF;
option go_package = "./proto;proto";

// The request message containing the user's name
message GreetingRequest {
  string name = 1;
}

// The response message containing the greeting
message GreetingResponse {
  string message = 1;
}

